welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:5: error: not found: value num
		if (nums(x)<=num(x+1) && x<nums.length-1) {
                             ^